<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.w.proandroid.ui.FlowLayout
        android:id="@+id/flowlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/text_flag_01"
            android:text="@string/hello" />

        <TextView
            style="@style/text_flag_01"
            android:text="@string/hello_hi" />

        <TextView
            style="@style/text_flag_01"
            android:text="@string/youaremine"
            android:textSize="18sp" />


        <TextView
            style="@style/text_flag_01"
            android:text="@string/hello" />

        <TextView
            style="@style/text_flag_01"
            android:text="@string/hello_hi" />

        <TextView
            style="@style/text_flag_01"
            android:text="@string/youaremine"
            android:textSize="18sp" />

        <TextView
            style="@style/text_flag_01"
            android:text="@string/hello" />

        <TextView
            style="@style/text_flag_01"
            android:text="@string/hello_hi" />

        <TextView
            style="@style/text_flag_01"
            android:text="@string/youaremine"
            android:textSize="18sp" />

        <TextView
            style="@style/text_flag_01"
            android:text="@string/hello" />

        <TextView
            style="@style/text_flag_01"
            android:text="@string/hello_hi" />

        <TextView
            style="@style/text_flag_01"
            android:text="@string/youaremine"
            android:textSize="18sp" />


    </com.w.proandroid.ui.FlowLayout>

</LinearLayout>
